--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "grunt": "^0.4.5",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-ng-annotate": "^0.8.0",
-    "grunt-nodemon": "^0.3.0"
+    "grunt-nodemon": "^0.3.0",
+    "jasmine-core": "^2.1.3",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.7",
+    "karma-jasmine": "^0.3.2"
   },
   "dependencies": {
     "express": "^4.10.5"
